fix: fixing per ip stats and tc
